switched ids  for previous search btns + cleaned up css spacing/removed stylings + corrected spelling of ids in HTML

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,13 +24,11 @@ header {
   padding: 10px 0;
 }
 
-.container-fluid .row div h5 {
+.container-fluid .row div h4 {
   font-weight: bold;
 }
 
-#city-date-icon,
-#city-name,
-#current-icon, #forecast-cards
+#city-date-icon, #city-name, #forecast-cards
 {
   display: flex;
 }
@@ -41,21 +39,12 @@ header {
 
 #forecast-weather {
   width: 100%;
+  
 }
 
 .forecast {
   margin: 20px;
 }
-
-
-
-
-
-
-
-
-
-
 
 footer {
     text-align: center;
